--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Seld Driving Car Simulation</h4>
+              <h4 class="h4 timeline-item-title">Self Driving Car Simulation</h4>
 
               <span>Jan 2024 | Python, Pygame, Ctypes, NEAT </span>
 
