--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web Development</h5>
+                <h5 class="h5">Computer Fundamentals</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -711,7 +711,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
+                <h5 class="h5">Web Development</h5>
                 <data value="50">50%</data>
               </div>
 
