--- a/index.html
+++ b/index.html
@@ -817,6 +817,24 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="machine learning">
+              <a href="https://github.com/Rmodgil120/Churn-Model" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-1.jpg" alt="machine learning" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Bank Churn Model</h3>
+
+                <p class="project-category">Machine Learning</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="applications">
               <a href="https://github.com/Rmodgil120/video_on_demand" target="_blank">
 
@@ -919,6 +937,24 @@
                 </figure>
 
                 <h3 class="project-title">Space Invaders</h3>
+
+                <p class="project-category">Games</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="games">
+              <a href="https://github.com/Rmodgil120/Jackpot-game">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">JackPot</h3>
 
                 <p class="project-category">Games</p>
 
