--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="machine learning" loading="lazy">
+                  <img src="./assets/images/Bank Churn.png" alt="machine learning" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Bank Churn Model</h3>
@@ -951,7 +951,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/slot machine.jpg" alt="metaspark" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">JackPot</h3>
