--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
       <article class="projects" data-page="projects">
 
         <header>
-          <h2 class="h2 article-title">projects</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
