--- a/index.html
+++ b/index.html
@@ -888,6 +888,24 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a href="https://github.com/Rmodgil120/garamchai" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-8.png" alt="dsm." loading="lazy">
+                </figure>
+
+                <h3 class="project-title">GaramChai</h3>
+
+                <p class="project-category">Applications</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="machine learning">
               <a href="https://github.com/Rmodgil120/object_detection" target="_blank">
 
