--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">A<span class="auto-type"></span></h2>
+          <h2 class="h2 article-title">About Me</span></h2>
         </header>
         
         <section class="about-text">
@@ -215,16 +215,6 @@
             I am eager to leverage my knowledge and skills to contribute to innovative projects and make a meaningful impact in the tech industry.
           </p>
 
-          <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script>
-        var typed = new Typed(".auto-type",{
-            strings: ["bout Me"],
-            typeSpeed: 150,
-            backSpeed: 150,
-            loop: true,
-            showCursor: false,
-        })
-    </script>
         </section>
         <!--
           - service
